addMixIn in JsonUtils, @FullTextField without ValueBridge